--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,9 @@ color: currentColor;
     text-decoration: none;
 }
 /* Common styles */
+.visually-hidden{
+
+}
 .container{
 width: 1158px;
 margin-left: auto;
@@ -80,6 +83,7 @@ background-color: var(--background-body-color);
     background-color:var(--header-background-color);
     padding-top: 24px;
         padding-bottom: 24px;
+        border-bottom: 1px solid var(--buttons-boarders-color) ;
 }
 .header-nav{
     display: flex;
@@ -160,7 +164,7 @@ gap:48px;
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
-    width:496px;
+    max-width:496px;
     margin:auto;
 }
 
@@ -177,6 +181,7 @@ gap:48px;
     border-radius: 4px;
     padding: 16px 32px;
     border: 0;
+    min-width: 169px;
 }
 
 .hero-button:hover, .hero-button:focus{
@@ -187,32 +192,49 @@ background-color: var(--active-color);
 .advantages-list{
     display: flex;
     justify-content: space-between;
+    gap:24px;
 }
 .advantages-list-card{
-    width: 264px;
+    width: calc((100% - 72px) / 4);
 }
+.advantages-list-card .card-titles{
+margin-bottom: 8px;
+}
+
 .title-what-are{
 margin-bottom: 72px;
 }
 .section-advantages-style{
-    padding-top: 120px;
-    padding-bottom: 60px;
+    padding:120px 0;
 }
 
 .section-what-style{
-padding-top: 60px;
+padding-top: 0px;
 padding-bottom: 120px;
 }
 .list-img-what{
 display: flex;
 gap:24px;
 }
-
+.img-what-are-we-doing{
+    width: calc((100% - 48px) / 3);
+}
 .section-projects-style{
     padding-top: 96px;
     padding-bottom: 120px;
 }
 
+.title-team{
+    margin-bottom: 72px;
+}
+.team-list{
+    display: flex;
+    gap:24px;
+    flex-wrap: wrap;
+}
+.team-list .card{
+width: calc((100%-3*24)/4);
+}
 
 .section-titles{
     font-weight: 700;
@@ -235,12 +257,18 @@ letter-spacing: 0.02em;
 }
 .card-titles.team{
     text-align: center;
+    margin-bottom: 8px;
 }
+
+.img-team{
+margin-bottom: 32px;
+}
+
 .card-description.team {
     text-align: center;
 }
 .card-description{
-
+padding-bottom: 32px;
 }
 
 .section-team-style{
@@ -270,7 +298,11 @@ letter-spacing: 0.02em;
     padding-top: 100px;
         padding-bottom: 100px;
 }
-
+.footer-style .logo-web{
+    display: block;
+    margin-bottom: 16px;
+}
 .footer-text {
     color: var(--light-footer-text);
+    max-width: 264px;
 }
