--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,16 @@ color: currentColor;
 }
 /* Common styles */
 .visually-hidden{
-
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    bottom: 0;
+    padding: 0;
+    white-space: normal;
+    clip-path: inset(100%);
+    clip:rect(0 0 0 0);
+    overflow: hidden;
 }
 .container{
 width: 1158px;
@@ -291,12 +300,47 @@ letter-spacing: 0.02em;
     color:var(--primary-brand-color);
     background-color: var(--light-section-color);
     cursor: pointer;
+    padding: 12px 24px;
+    border: 1px solid var(--buttons-boarders-color);
+    border-radius: 4px;
+}
+
+.btn-portfolio-list{
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    margin-bottom:72px;
 }
 
 .section-buttons:hover, .section-buttons:focus{
     color:var(--light-text-color);
     background-color: var(--active-color);
+    border:1px solid transparent;
 }
+
+.projects-list{
+    display: flex;
+    column-gap:24px;
+    row-gap:48px;
+    flex-wrap: wrap;
+    }
+
+.projects-cards{
+width: calc((100% - 48px) / 3);
+}
+
+.projects-name-container{
+    border:1px solid var(--buttons-boarders-color);
+    padding: 32px 16px;
+    border-top: 0;
+}
+.projects-name-container .card-titles{
+    margin-bottom: 8px;
+}
+
+
+
+
 /* footer */
 .footer-style {
     background-color: var(--dark-brand-color);
