--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ color: currentColor;
     margin: -1px;
     bottom: 0;
     padding: 0;
-    white-space: normal;
+    white-space: nowrap;
     clip-path: inset(100%);
     clip:rect(0 0 0 0);
     overflow: hidden;
