--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ margin-left: auto;
 margin-right: auto;
 padding-left: 15px;
 padding-right: 15px;
-outline: 2px solid red;
+/* outline: 2px solid red; */
 
 }
 
